# label_printer_bp730

./: .gitattributes  .gitignore  LICENSE  README.md  Setup Office.command  Start Labels.command  label.py  label_design.py  label_setup.py  office_setup.py  print_label.py  pyproject.toml  raster_ezpl.py
designs/: GLS_QR_new.json  Whitelabel_QR.json  c2c_QR.json  chargeIQ_QR.json
labelprint/: __init__.py  cli.py  core.py  launcher.py
labelprint/web/: __init__.py  app.py
labelprint/web/static/: app.css  app.js  designer.css  designer.js
labelprint/web/templates/: base.html  designer.html  index.html
labelprint/web/templates/partials/: message.html  preview.html  variables.html
